# card-counter-pro-desktop

./: .gitignore  CMakeLists.txt  env.h.in
data/: CMakeLists.txt
data/cards/: CMakeLists.txt
images/: CMakeLists.txt
images/cards/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/CardCounterPRO/: CMakeLists.txt  CardCounterPRO.cpp  CardCounterPRO.h  CardCounterPRO.ui
src/entry/: CMakeLists.txt  main.cpp
src/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/test/: CMakeLists.txt  mainwindow.h  mainwindow.ui
src/ui/: CMakeLists.txt  betselection.cpp  betselection.h  centralwidget.cpp  centralwidget.h  gameboard.cpp  gameboard.h  instructions.cpp  instructions.h  mainwindow.cpp  mainwindow.h  playbuttons.cpp  playbuttons.h
