# ./images/cards

set(CARDS
	01_of_spades_A.png
	02_of_spades.png
	03_of_spades.png
	04_of_spades.png
	05_of_spades.png
	06_of_spades.png
	07_of_spades.png
	08_of_spades.png
	09_of_spades.png
	10_of_spades.png
	Jack_of_spades.png
	Queen_of_spades.png
	King_of_spades.png

	01_of_diamonds_A.png
	02_of_diamonds.png
	03_of_diamonds.png
	04_of_diamonds.png
	05_of_diamonds.png
	06_of_diamonds.png
	07_of_diamonds.png
	08_of_diamonds.png
	09_of_diamonds.png
	10_of_diamonds.png
	Jack_of_diamonds.png
	Queen_of_diamonds.png
	King_of_diamonds.png

	01_of_clubs_A.png
	02_of_clubs.png
	03_of_clubs.png
	04_of_clubs.png
	05_of_clubs.png
	06_of_clubs.png
	07_of_clubs.png
	08_of_clubs.png
	09_of_clubs.png
	10_of_clubs.png
	Jack_of_clubs.png
	Queen_of_clubs.png
	King_of_clubs.png

	01_of_clubs_A.png
	02_of_clubs.png
	03_of_clubs.png
	04_of_clubs.png
	05_of_clubs.png
	06_of_clubs.png
	07_of_clubs.png
	08_of_clubs.png
	09_of_clubs.png
	10_of_clubs.png
	Jack_of_clubs.png
	Queen_of_clubs.png
	King_of_clubs.png
)

install(FILES ${CARDS} DESTINATION images/cards)
